Fix #331 Move Others tab to same line as all tabs Remove more-tabs functionality Hide labels for tabs on smaller screens and show tooltips

--- a/www/src/scss/_theme-blue-darbar.scss
+++ b/www/src/scss/_theme-blue-darbar.scss
@@ -47,6 +47,7 @@ $bg-bright: #424242;
 $text-base: #bdbdbd;
 $text-bright: #e0e0e0;
 $text-dim: #9e9e9e;
+$text-inactive: rgba(189, 189, 189, 0.5);
 $border: #424242;
 $scrollbar: #999;
 $white: #fff;
@@ -68,10 +69,17 @@ $highlight-text: #cfd8dc;
     }
   }
 
-  .navigator-header,
-  .more-tabs .nav-header-tab {
+  .navigator-header {
     background-color: $bg-main;
     color: $text-base;
+  }
+
+  .nav-header-tab {
+    color: $text-inactive;
+
+    &.active {
+      color: $text-base;
+    }
   }
 
   #gurmukhi-keyboard {
